--- a/05-classes.html
+++ b/05-classes.html
@@ -12,7 +12,22 @@
 
 
 
-    //1ª Digitação (aqui) 
+class Pessoa {
+      // Propriedades
+      nome = 'sem nome';
+      genero = 'não informado';
+      idade;
+      // Métodos
+      mostraGenero() {
+        exibirNaTela(this.genero);
+      }
+      mostraNome() {
+        exibirNaTela(this.nome);
+      }
+      verificaIdade() {
+        return this.idade  >= 18 ? 'maior de idade' : 'menor de idade';
+      }
+    } 
 
 
 
@@ -37,7 +52,19 @@
 
 
 
-    //2ª Digitação (aqui) 
+    let UmaPessoa = new Pessoa;
+    umaPessoa.nome = 'Checo Perez';
+    umaPessoa.genero = 'masculino';
+    umaPessoa.idade = 30;
+
+    exibirNaTela(umaPessoa);
+
+    let OutraPessoa = new Pessoa;
+    OutraPessoa.nome = 'Maria';
+    umaPessoa.genero = 'masculino';
+    OutraPessoa.idade = 25;
+
+    exibirNaTela(outraPessoa);
 
 
 
@@ -47,9 +74,16 @@
 
 
 
-     //3ª Digitação (aqui) 
+     let aluno = new Aluno;
+     aluno.nome = 'Vitória';
+     aluno.genero = 'feminino';
+     aluno.matricula = '123abc';
+     aluno.curso = 'JS para React';
+     aluno.idade = '25';
 
-
+     exibirNaTela(aluno.nome);
+     exibirNaTela(aluno.idade);
+     exibirNaTela(aluno.verificaIdade());
 
 
     // Console.log(aluno)
