--- a/06-operador-spread.html
+++ b/06-operador-spread.html
@@ -16,7 +16,8 @@
 
 
 
-    //1ª Digitação (aqui) 
+    const bandas = ['Metallica', 'Guns n Roses', 'RHCP', 'Deep Purple'];
+    const maisbandas = [...bandas, 'Charlie Brown Jr', 'Mega Death']; 
 
 
 
@@ -28,7 +29,18 @@
 
 
 
-    //2ª Digitação (aqui) 
+    const dados = {
+      nome: 'Viviane',
+      idade: 21
+    };
+    
+    const novosDados = {
+      ...dados,
+      cidade: 'São Paulo',
+      estado: 'SP',
+      idade: 25 //sobrescrevendo o valor somente da idade
+    }
+    exibirNaTela
 
 
 
