--- a/01-var-let-const.html
+++ b/01-var-let-const.html
@@ -11,7 +11,14 @@
   <script>
   
   
-    //1ª Digitação (aqui) 
+    // Jeito antigo de usar variáveis
+    var meuNome = 'Kauê';
+
+    // Jeito moderno de usar variáveis
+    let meuNome = 'Kauê';
+
+    // Se tiver certeza que nunca muda (usar constante)
+    // const meuNome = 'Kauê'
 
 
     exibirNaTela(meuNome);
@@ -20,7 +27,14 @@
 
 
 
-    //2ª Digitação (aqui) 
+    let idade = 20;
+    let mensagem;
+
+    if(idade === 20) {
+      mensagem = 'É maior de idade';
+    } else {
+      mensagem = 'É menor de idade';
+    }
 
 
 
