--- a/02-arrow-functions.html
+++ b/02-arrow-functions.html
@@ -12,7 +12,15 @@
 
 
 
-    //1ª Digitação (aqui) 
+    // Função sintaxe tradicional
+    function nomeDaFuncao() {
+      exibirNaTela('Função de sintaxe tradicional');
+    }
+
+    // Fução anônima
+    var outraFuncao = function() {
+      exibirNaTela('Outra forma de declarar função...');
+    }
 
 
 
@@ -28,7 +36,11 @@
 
 
 
-    //2ª Digitação (aqui) 
+    function exercicio(valor1,valor2) {
+      return valor1 - valor2;
+    }
+
+    let resultado = exercicio(10,3);
 
 
 
@@ -68,7 +80,17 @@
 
     
 
-    //3ª Digitação (aqui) 
+    const converterParaMaiusculas = (nome) => {
+    return nome.toUpperCase();
+  };
+
+  const nomes = ['Kauê', 'Luana', 'Laura'];
+
+  nomes.forEach(nome => {
+    const nomeMaiusculo = converterParaMaiusculas(nome);
+    console.log(nomeMaiusculo);
+    document.write(`<p>${nomeMaiusculo}</p>`);
+  });
 
 
 
