--- a/03-template-literal.html
+++ b/03-template-literal.html
@@ -19,7 +19,7 @@
 
 
 
-    //1ª Digitação (aqui) 
+    let mensagem = "Meu nome é: "+nome+  " "+sobrenome+", tenho "+idade+"anos e moro atualmente na cidade de "+cidade+" - "
 
 
 
@@ -31,7 +31,7 @@
 
 
 
-    //2ª Digitação (aqui) 
+    let mensagem2 = `Meu nome é <b class="teste"> ${nome.toUpperCase()} ${sobrenome} </b>, Sou ${idade>=18 ? 'maior':'menor'} de idade.` ;
 
 
 
