--- a/09-metodos-de-array.html
+++ b/09-metodos-de-array.html
@@ -18,7 +18,7 @@
 
 
 
-    //1ª Digitação (aqui) 
+    const numerosDobrados = numeros.map( numero => numero * 2);
 
 
 
@@ -41,7 +41,7 @@
 
 
 
-    //2ª Digitação (aqui) 
+    const nomesMaiusculo = nomes.map( nome =>nome.toLocaleUpperCase());
 
 
 
@@ -59,7 +59,10 @@
 
 
 
-    //3ª Digitação (aqui) 
+    const vendas = [1500 , 2000, 10000, 1000, 500];
+    const meta = 1000;
+
+    const vendasAcimaDaMeta = vendas.filter(venda => venda)
 
 
 
@@ -84,7 +87,7 @@
 
 
 
-    //4ª Digitação (aqui) 
+    const result = alunos.filter( aluno => aluno.startsWith('M') ?? aluno);
 
 
 
@@ -112,7 +115,7 @@
 
 
 
-    //5ª Digitação (aqui) 
+    const cursosFront = cursos.filter(cursos => cursos.categoria == 'Front-End');
 
 
 
@@ -127,7 +130,7 @@
 
 
 
-    //6ª Digitação (aqui) 
+    const titulos = cursos.map( curso => curso.titulo);
 
 
 
@@ -140,7 +143,9 @@
 
 
 
-    //7ª Digitação (aqui) 
+    const titulosFront = cursos
+        .filter(curso = curso.categoria == 'Front-End')
+        .map(curso => curso.titulo); 
 
 
 
@@ -171,7 +176,11 @@
     
 
 
-    //8ª Digitação (aqui) 
+    const somaCursosMobile = cursos
+      .filter(curso => curso.categoria == 'Mobile')
+      .reduce((i, curso) => {
+        return i + curso.preco
+      }, 0)
 
 
 
